--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 	"dependencies": {
 		"@prisma/client": "^6.6.0",
 		"node-fetch": "^3.3.2",
-		"prisma": "^6.6.0",
 		"puppeteer": "^24.5.0"
+	},
+	"devDependencies": {
+		"prisma": "^6.6.0"
 	}
 }
