--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"description": "",
 	"dependencies": {
 		"@prisma/client": "^6.6.0",
+		"cors": "^2.8.5",
 		"express": "^5.1.0",
 		"node-fetch": "^3.3.2",
 		"puppeteer": "^24.5.0"
